<resources>
    <string name="app_name">AboutAndroidApp</string>
    <string name="artyan">ARTYAN</string>
    <string name="bio_details">"Android, operating system for cellular telephones and tablet computers. Android began in 2003 as a project of the American technology company Android Inc., to develop an operating system for digital cameras. In 2004 the project changed to become an operating system for smartphones. Android Inc., was bought by the American search engine company Google Inc., in 2005. At Google, the Android team decided to base their project on Linux, an open source operating system for personal computers. On November 5, 2007, Google announced the founding of the Open Handset Alliance, a consortium of dozens of technology and mobile telephone companies, including Intel Corporation, Motorola, Inc., NVIDIA Corporation, Texas Instruments Incorporated, LG Electronics, Inc., Samsung Electronics, Sprint Nextel Corporation, and T-Mobile (Deutsche Telekom). The consortium was created in order to develop and promote Android as a free open source operating system with support for third-party applications. Android-based devices use wireless networks in order to take full advantage of features such as one-touch Google searches, Google Docs (e.g., word editors, spreadsheets), and Google Earth (satellite mapping software). The first cellular telephone to feature the new operating system was the T-Mobile G1, released on October 22, 2008. In 2012 Android became the most popular operating system for mobile devices, surpassing Apple’s iOS, and, as of 2020, about 75 percent of mobile devices run Android."</string>
    <string name="what_is_your_nick_name">what_is_your_nick_name</string>
    <string name="done">Done!</string>
    <string name="yellow_star">yellow star</string>
</resources>